--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "easy-peasy": "^5.0.3",
     "firebase": "7.17.0",
     "firebase-admin": "9.0.0",
     "next": "latest",
