--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase-admin": "9.0.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "license": "MIT"
 }
