--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui-treasury/components": "^2.0.0-alpha.1",
+    "@mui-treasury/styles": "^2.0.0-alpha.1",
     "easy-peasy": "^5.0.3",
     "firebase": "7.17.0",
     "firebase-admin": "9.0.0",
     "next": "latest",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
